--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title></title>
+	<title>Harness the Gnarness</title>
 
 		<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -14,47 +14,114 @@
 
 <body>
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Simon Kirk Lamb</a>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Simon Kirk Laub</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#" data-id="0">Recent Work</a></li>
+          <li><a href="#" data-id="1">Painting</a></li>
+          <li><a href="#" data-id="2">Other</a></li>
+          <li><a href="#" data-id="3">About</a></li>
+          <li><a href="#" data-id="4">Contact</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+
+  <div id="content">
+    <div class="scrollWrapper div0">
+      <div id="scroll">
+        <ul>
+          <li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img01.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img02.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img03.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img04.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img05.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img06.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img07.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img02.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/img04.jpg" alt=""><span>Image Name</span></a></li>
+        </ul>
+      </div>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#">Recent Work</a></li>
-        <li><a href="#">Painting</a></li>
-        <li><a href="#">Other</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+        <div class="painting scrollWrapper div1">
+      <div id="scroll">
+        <ul>
+          <li><a href="#"><img src="img/paintings/img1.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img2.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img3.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img4.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img5.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img6.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img7.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img8.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img9.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img10.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img11.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img12.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img13.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img14.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img15.jpg" alt=""><span>Image Name</span></a></li>
+        </ul>
+      </div>
+    </div>
+    
+           <div class="other scrollWrapper div2">
+      <div id="scroll">
+        <ul>
+          <li><a href="#"><img src="img/other/img1.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img2.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img3.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img4.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img5.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img6.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img7.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img8.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img9.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img10.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img11.jpg" alt=""><span>Image Name</span></a></li>
+        </ul>
+      </div>
+    </div>
 
-<div id="scroll">
-<ul>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-<li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-</ul>
-</div>
+    <div class="about div3">
+      <div class="aboutImg"><img src="img/simonabout.jpg"></div>
+      <div class="aboutP">
+        <p>Simon is a San Francisco based artist, painter, and creator. His work centers around pop-culture, outer-space, and patterns. He loves noodle soups.</p>
+        <p>Simon uses spray paint, paint pens, acrylic paint, stickers, and whatever he can get his hands on to create his art.</p>
+        <p>He grew up in Santa Barbara, California and attended Cal-Poly San Luis Obispo.</p>
+      </div>
+    </div>
 
+    <div class="contact div4">
+      <div class="contactWrapper">
+        <h2>Contact</h2>
+        <p>Simon is available for local projects, collaborations, gallery or venue showings as well as live paintings and commissioned pieces. Use the form to inquire about rates and availability, or just to say hi.</p>
+          <form id="form" class="topBefore">
+            <input id="name" type="text" placeholder="NAME">
+            <input id="email" type="text" placeholder="E-MAIL">
+            <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
+            <input id="submit" type="submit" value="GO!">
+          </form>
+
+        </div>
+      </div>  
+  </div>
 
 <!-- SCRIPT -->
 
