--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
     <div class="scrollWrapper div0">
       <div id="scroll">
         <ul>
-          <li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img01.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img02.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img03.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img04.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img05.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img06.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img07.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img02.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/img04.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/simon_1.jpg" alt=""><span>Blue Ray</span></a></li>
+          <li><a href="#"><img src="img/img01.jpg" alt=""><span>Molly Made</span></a></li>
+          <li><a href="#"><img src="img/img02.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/img03.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/img04.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/img05.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/img06.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/img07.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/img02.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/img04.jpg" alt=""><span>Unnamed</span></a></li>
         </ul>
       </div>
     </div>
@@ -61,21 +61,21 @@
         <div class="painting scrollWrapper div1">
       <div id="scroll">
         <ul>
-          <li><a href="#"><img src="img/paintings/img1.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img2.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img3.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img4.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img5.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img6.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img7.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img8.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img9.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img10.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img11.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img12.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img13.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img14.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/paintings/img15.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/paintings/img1.jpg" alt=""><span>Blue Desert</span></a></li>
+          <li><a href="#"><img src="img/paintings/img2.jpg" alt=""><span>Jungle Planet</span></a></li>
+          <li><a href="#"><img src="img/paintings/img3.jpg" alt=""><span>Dre Hearts</span></a></li>
+          <li><a href="#"><img src="img/paintings/img4.jpg" alt=""><span>Space Armor</span></a></li>
+          <li><a href="#"><img src="img/paintings/img5.jpg" alt=""><span>Space Ray</span></a></li>
+          <li><a href="#"><img src="img/paintings/img6.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img7.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img8.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img9.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img10.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img11.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img12.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img13.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img14.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/paintings/img15.jpg" alt=""><span>Unnamed</span></a></li>
         </ul>
       </div>
     </div>
@@ -83,17 +83,17 @@
            <div class="other scrollWrapper div2">
       <div id="scroll">
         <ul>
-          <li><a href="#"><img src="img/other/img1.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img2.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img3.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img4.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img5.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img6.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img7.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img8.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img9.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img10.jpg" alt=""><span>Image Name</span></a></li>
-          <li><a href="#"><img src="img/other/img11.jpg" alt=""><span>Image Name</span></a></li>
+          <li><a href="#"><img src="img/other/img1.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img2.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img3.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img4.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img5.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img6.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img7.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img8.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img9.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img10.jpg" alt=""><span>Unnamed</span></a></li>
+          <li><a href="#"><img src="img/other/img11.jpg" alt=""><span>Unnamed</span></a></li>
         </ul>
       </div>
     </div>
